--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <div class="container">
             <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-            <h1>So I know we have had our problems recently but with this hopefully we can have a fresh start</h1>
-            <p>Lets me take care of you and hopefully we can lock in properly this time xx</p>
+            <h1>Hey chewbs, I made this cause we have been having problems recently and I wanna start fresh with you</h1>
+            <p>hopefully we can start properly this time and go back to being best friends again and lock in properly this time xx</p>
 
             <div class ="btn">
                 <a href="yes.html">Yes</a>
