--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-            <h1>Hey chewbs, I made this cause we have been having problems recently and I wanna start fresh with you</h1>
+            <h1>Hey chewbs, I made this cause I know we have been having problems recently and I wanna start fresh with you so let me formally ask again will you be my gf again</h1>
             <p>hopefully we can start properly this time and go back to being best friends again and lock in properly this time xx</p>
 
             <div class ="btn">
