--- a/no3.html
+++ b/no3.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="tenor-gif-embed" data-postid="25768389" data-share-method="host" data-aspect-ratio="1.06667" data-width="100%"><a href="https://tenor.com/view/%E8%B8%A2%E8%85%B3-gif-25768389">踢腳 Sticker</a>from <a href="https://tenor.com/search/%E8%B8%A2%E8%85%B3-stickers">踢腳 Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             <h1>click no again and ill throw a brick at your forehead</h1>
-            <p>I will loop this motherfucker XD</p>
+            <p>Yes I will loop this motherfucker XD</p>
 
             <div class ="btn">
                 <a href="yes.html">Yes</a>
