--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <div class="container">
             <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-            <h1>Hey chewbs, I made this cause I recognize we have been having problems recently and I wanna start fresh with you so let me formally ask, let me be your bf properly this time</h1>
-            <p>hopefully we can do it right from now on xx</p>
+            <h1>Hey cutie, I made this just cause I was thinking about you. I want this to signify us leaving stuff in the past and that I can be the right boyfriend for you now xx</h1>
+            <p>hopefully we can lock into this relationship correctly, you in? xx</p>
 
             <div class ="btn">
                 <a href="yes.html">Yes</a>
